src/com/dw/system/codedom/parser/UQLTreeParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. UQLTreeParser.java */
package com.dw.system.codedom.parser;

import java.io.StringReader;
import java.io.*;
import java.util.*;

public class UQLTreeParser/*@bgen(jjtree)*/implements UQLTreeParserTreeConstants, UQLTreeParserConstants {/*@bgen(jjtree)*/
  protected JJTUQLTreeParserState jjtree = new JJTUQLTreeParserState();

  public static ASTExp parseExpToTree(String exp_str)
        throws Exception
  {
        StringReader sr = new StringReader(exp_str);
        return parseExpToTree(sr);
  }

  public static ASTExp parseExpToTree(StringReader sr)
        throws Exception
  {

        UQLTreeParser utp = new UQLTreeParser(sr) ;
        return utp.Expression();
  }

  public static ASTExp parseExpToTree(InputStream inps)
        throws Exception
  {

        UQLTreeParser utp = new UQLTreeParser(inps) ;
        return utp.Expression();
  }

  public static ASTCodeBlock parseCodeBlockToTree(String exp_str)
        throws Exception
  {
        StringReader sr = new StringReader(exp_str);
        return parseCodeBlockToTree(sr);
  }

  public static ASTCodeBlock parseCodeBlockToTree(StringReader sr)
        throws Exception
  {

        UQLTreeParser utp = new UQLTreeParser(sr) ;
        return utp.Block();
  }


  public static ASTCodeBlock parseCodeBlockToTree(InputStream inps)
        throws Exception
  {
        UQLTreeParser utp = new UQLTreeParser(inps) ;
        return utp.Block();
  }

  final public void Name() throws ParseException {
 /*@bgen(jjtree) Name */
  ASTName jjtn000 = new ASTName(JJTNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(DOT);
        jj_consume_token(IDENTIFIER);
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void NameList() throws ParseException {
 /*@bgen(jjtree) NameList */
  ASTNameList jjtn000 = new ASTNameList(JJTNAMELIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Name();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 70:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_2;
        }
        jj_consume_token(70);
        Name();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/************************ dom节点定制***********/
  final public ASTCodeBlock Block() throws ParseException {
 /*@bgen(jjtree) CodeBlock */
  ASTCodeBlock jjtn000 = new ASTCodeBlock(JJTCODEBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(71);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case USER:
        case ROLE:
        case ORG_UNIT:
        case LPAREN:
        case TRUE:
        case FALSE:
        case VAR:
        case IF:
        case NULL:
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case IDENTIFIER:
        case 71:
        case 73:
        case 74:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_3;
        }
        BlockStatement();
      }
      jj_consume_token(72);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void BlockStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      LocalVariableDeclaration();
      jj_consume_token(73);
      break;
    case USER:
    case ROLE:
    case ORG_UNIT:
    case LPAREN:
    case TRUE:
    case FALSE:
    case IF:
    case NULL:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case 71:
    case 73:
    case 74:
      Statement();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void LocalVariableDeclaration() throws ParseException {
    jj_consume_token(VAR);
    VariableDeclarator();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 70:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      jj_consume_token(70);
      VariableDeclarator();
    }
  }

  final public void VariableDeclarator() throws ParseException {
 /*@bgen(jjtree) VarDeclarator */
  ASTVarDeclarator jjtn000 = new ASTVarDeclarator(JJTVARDECLARATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      item_var();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        Expression();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*
 * Statement syntax follows.
 */
  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 71:
      Block();
      break;
    case 73:
      EmptyStatement();
      break;
    case USER:
    case ROLE:
    case ORG_UNIT:
    case LPAREN:
    case TRUE:
    case FALSE:
    case NULL:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case 74:
      Expression();
      jj_consume_token(73);
      break;
    case IF:
      IfStatement();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void EmptyStatement() throws ParseException {
    jj_consume_token(73);
  }

  final public void IfStatement() throws ParseException {
 /*@bgen(jjtree) CodeIf */
  ASTCodeIf jjtn000 = new ASTCodeIf(JJTCODEIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        Statement();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*不考虑任何形式的表达式*/
  final public ASTExp Expression() throws ParseException {
 /*@bgen(jjtree) Exp */
  ASTExp jjtn000 = new ASTExp(JJTEXP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SubExp();
      label_5:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_5;
        }
        item_oper();
        SubExp();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void SubExp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case USER:
    case ROLE:
    case ORG_UNIT:
    case TRUE:
    case FALSE:
    case NULL:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case 74:
      SubExpLeft();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SubExpLeft() throws ParseException {
    if (jj_2_3(2)) {
      item_const();
    } else if (jj_2_4(2)) {
      item_var();
    } else if (jj_2_5(2)) {
      ExpFunc();
    } else if (jj_2_6(2)) {
      ExpProp();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*条件表达式，他只有and or 操作,三元操作
ASTExpCond ExpCond() #ExpCond :
{}
{

	(
		LOOKAHEAD(2) item_const()
		|LOOKAHEAD(3) ExpFunc()
		|
		(
			LOOKAHEAD(item_var() ".")
			ExpDotList()
			|item_var()
		)
	)
	item_cond_oper() Expression()
    
	{ return jjtThis; }
}
*/




/*
	调用方法表达式
*/
  final public void ExpFunc() throws ParseException {
 /*@bgen(jjtree) ExpFunc */
        ASTExpFunc jjtn000 = new ASTExpFunc(JJTEXPFUNC);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
      Arguments();
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                  jjtn000.setName(t.image);
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

/*
	形如 xx.xx().dfsd.asdfsadf 表达式

void ExpDotList() #ExpDotList:
{
	Token t;
}
{
	item_var() "." (LOOKAHEAD(2) Expression()|ExpProp())
	
}*/
  final public void ExpProp() throws ParseException {
 /*@bgen(jjtree) ExpProp */
        ASTExpProp jjtn000 = new ASTExpProp(JJTEXPPROP);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.setName(t.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Arguments() throws ParseException {
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case USER:
    case ROLE:
    case ORG_UNIT:
    case LPAREN:
    case TRUE:
    case FALSE:
    case NULL:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case 74:
      ArgumentList();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  final public void ArgumentList() throws ParseException {
 /*@bgen(jjtree) ArgumentList */
  ASTArgumentList jjtn000 = new ASTArgumentList(JJTARGUMENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 70:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(70);
        Expression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void item_var() throws ParseException {
 /*@bgen(jjtree) #Var( 0) */
        ASTVar jjtn000 = new ASTVar(JJTVAR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 74:
        jj_consume_token(74);
        t = jj_consume_token(IDENTIFIER);
                             jjtree.closeNodeScope(jjtn000,  0);
                             jjtc000 = false;
                             jjtn000.setName("@"+t.image);
        break;
      case USER:
        t = jj_consume_token(USER);
                     jjtree.closeNodeScope(jjtn000,  0);
                     jjtc000 = false;
                     jjtn000.setName(t.image);
        break;
      case ROLE:
        t = jj_consume_token(ROLE);
                     jjtree.closeNodeScope(jjtn000,  0);
                     jjtc000 = false;
                     jjtn000.setName(t.image);
        break;
      case ORG_UNIT:
        t = jj_consume_token(ORG_UNIT);
                         jjtree.closeNodeScope(jjtn000,  0);
                         jjtc000 = false;
                         jjtn000.setName(t.image);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  0);
          }
    }
  }

  final public void item_cond_oper() throws ParseException {
 /*@bgen(jjtree) OperCond */
        ASTOperCond jjtn000 = new ASTOperCond(JJTOPERCOND);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                jjtn000.setOperStr(t.image);
        break;
      case OR:
        t = jj_consume_token(OR);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void item_oper() throws ParseException {
 /*@bgen(jjtree) Oper */
        ASTOper jjtn000 = new ASTOper(JJTOPER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                jjtn000.setOperStr(t.image);
        break;
      case OR:
        t = jj_consume_token(OR);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case ASSIGN:
        t = jj_consume_token(ASSIGN);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                     jjtn000.setOperStr(t.image);
        break;
      case GT:
        t = jj_consume_token(GT);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case LT:
        t = jj_consume_token(LT);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case EQ:
        t = jj_consume_token(EQ);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case LE:
        t = jj_consume_token(LE);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case GE:
        t = jj_consume_token(GE);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case NE:
        t = jj_consume_token(NE);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setOperStr(t.image);
        break;
      case SC_OR:
        t = jj_consume_token(SC_OR);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.setOperStr(t.image);
        break;
      case SC_AND:
        t = jj_consume_token(SC_AND);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                     jjtn000.setOperStr(t.image);
        break;
      case PLUS:
        t = jj_consume_token(PLUS);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   jjtn000.setOperStr(t.image);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.setOperStr(t.image);
        break;
      case STAR:
        t = jj_consume_token(STAR);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   jjtn000.setOperStr(t.image);
        break;
      case SLASH:
        t = jj_consume_token(SLASH);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.setOperStr(t.image);
        break;
      case BIT_AND:
        t = jj_consume_token(BIT_AND);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                      jjtn000.setOperStr(t.image);
        break;
      case BIT_OR:
        t = jj_consume_token(BIT_OR);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                     jjtn000.setOperStr(t.image);
        break;
      case REM:
        t = jj_consume_token(REM);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
